[gd_scene load_steps=5 format=3 uid="uid://cynaphj5tfkt8"]

[ext_resource type="Script" uid="uid://b8yq8oyeptc1b" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Texture2D" uid="uid://bffltoe30gw13" path="res://Assets/2D Assets/ianCardH.png" id="1_48xlc"]
[ext_resource type="Texture2D" uid="uid://bxqgi0xbpq1cr" path="res://Assets/2D Assets/schollesCardH.png" id="2_1ehe0"]
[ext_resource type="Texture2D" uid="uid://ct2x4yii2yv6w" path="res://Assets/2D Assets/caio.png" id="4_ce3w2"]

[node name="Menu" type="Node"]
script = ExtResource("1_1ehe0")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://jfyf77tcbqro")
spawn_path = NodePath("../Level Spawner")
spawn_limit = 1

[node name="Level Spawner" type="Node" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]
follow_viewport_enabled = true

[node name="Title" type="Label" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.454
anchor_top = 0.303
anchor_right = 1.0
anchor_bottom = 0.746
offset_left = 60.8799
offset_top = 26.84
offset_right = -55.0
offset_bottom = -26.1201
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(307.5, 135)
theme_override_font_sizes/font_size = 69
text = "CARDS IMPACT"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Control/CanvasLayer/Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.475
anchor_top = 0.365
anchor_right = 0.475
anchor_bottom = 0.365
offset_left = -100.125
offset_top = -11.55
offset_right = 99.875
offset_bottom = 11.45
pivot_offset = Vector2(100, 11)
text = "A game by Gian and Killer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.564
anchor_top = 0.581
anchor_right = 0.954
anchor_bottom = 0.761
offset_left = 0.0799561
offset_top = -0.320007
offset_right = -0.120117
offset_bottom = 0.0799561
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Exit" type="Button" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.625
anchor_top = 0.779
anchor_right = 0.888
anchor_bottom = 0.967
offset_top = 0.119995
offset_right = 0.359863
offset_bottom = -0.240051
theme_override_font_sizes/font_size = 31
text = "Exit"

[node name="Scholles" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_right = -40.0
grow_horizontal = 0

[node name="Sprite2D2" type="Sprite2D" parent="Control/Scholles"]
position = Vector2(-329, 89)
scale = Vector2(2.09412, 0.415)
texture = ExtResource("2_1ehe0")

[node name="Ian" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Control/Ian"]
position = Vector2(223.999, 441)
scale = Vector2(1.28824, 0.37)
texture = ExtResource("1_48xlc")

[node name="Caio" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_bottom = -40.0
grow_vertical = 0

[node name="Sprite2D3" type="Sprite2D" parent="Control/Caio"]
position = Vector2(579, -30)
scale = Vector2(2.724, 0.315243)
texture = ExtResource("4_ce3w2")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 284.0
offset_bottom = 363.0
theme_override_constants/separation = 20

[node name="Host_Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="LineEdit" type="LineEdit" parent="Control/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter the host IP"
alignment = 1

[connection signal="pressed" from="Control/CanvasLayer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Host_Button" to="." method="Host_Button_Apertado"]
[connection signal="pressed" from="Control/VBoxContainer/Join Button" to="." method="Join_Button_Apertado"]
